--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
                         </div>
                         <ul class="links">
                             <li>
-                                <a href="#"><i class="far fa-comments fa-fw"></i>Testimonials</a>
+                                <a href="#testimonials"><i class="far fa-comments fa-fw"></i>Testimonials</a>
                             </li>
                             <li>
-                                <a href="#"><i class="far fa-user fa-fw"></i>Team Members</a>
+                                <a href="#team"><i class="far fa-user fa-fw"></i>Team Members</a>
                             </li>
                             <li>
-                                <a href="#"><i class="far fa-building fa-fw"></i>Services</a>
+                                <a href="#services"><i class="far fa-building fa-fw"></i>Services</a>
                             </li>
                             <li>
-                                <a href="#"><i class="far fa-check-circle fa-fw"></i>Our Skills</a>
+                                <a href="#our-skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a>
                             </li>
                             <li>
-                                <a href="#"><i class="far fa-clipboard fa-fw"></i>How It Works</a>
+                                <a href="#work-steps"><i class="far fa-clipboard fa-fw"></i>How It Works</a>
                             </li>
                         </ul>
                         <ul class="links">
-                            <li><a href="#"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
-                            <li><a href="#"><i class="fas fa-server fa-fw"></i>Priceing Plan</a></li>
-                            <li><a href="#"><i class="far fa-play-circle fa-fw"></i>Top Videos</a></li>
-                            <li><a href="#"><i class="far fa-chart-bar fa-fw"></i>Stats</a></li>
-                            <li><a href="#"><i class="fas fa-percent fa-fw"></i>Request A Discount</a></li>
+                            <li><a href="#events"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
+                            <li><a href="#pricing"><i class="fas fa-server fa-fw"></i>Priceing Plan</a></li>
+                            <li><a href="#videos"><i class="far fa-play-circle fa-fw"></i>Top Videos</a></li>
+                            <li><a href="#stats"><i class="far fa-chart-bar fa-fw"></i>Stats</a></li>
+                            <li><a href="#discount"><i class="fas fa-percent fa-fw"></i>Request A Discount</a></li>
                         </ul>
                     </div>
                     <!-- Meaga Menu -->
@@ -682,7 +682,7 @@
     <!-- Pricing -->
 
     <!-- Videos -->
-    <div class="videos" id="videso">
+    <div class="videos" id="videos">
         <h2 class="main_title">Top Videos</h2>
         <div class="container">
             <div class="holder">
